--- a/evaluacion-preliminar-datasets.ipynb
+++ b/evaluacion-preliminar-datasets.ipynb
@@ -16,7 +16,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Antes de levantar los archivos, debemos cambiar su atributo `encoding` a `utf-8`"
+    "Antes de levantar los archivos, debemos cambiar su atributo `encoding` a `utf-8`. <br>\n",
+    "Luego elegimos el encoding (puede ser ANSI o Latin-1, por el momento, debido a las tildes)."
    ]
   },
   {
@@ -25,14 +26,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Levantamos los datasets (archivos .csv)\n",
-    "df_clientes     =pd.read_csv('./Datasets/Clientes.csv'   , encoding='latin-1', sep=';', index_col='ID')\n",
-    "df_compras      =pd.read_csv('./Datasets/Compra.csv'     , encoding='latin-1', sep=',', index_col='IdCompra')\n",
-    "df_gastos       =pd.read_csv('./Datasets/Gasto.csv'      , encoding='latin-1', sep=',', index_col='IdGasto')\n",
-    "df_localidades  =pd.read_csv('./Datasets/Localidades.csv', encoding='latin-1', sep=',', index_col='id')\n",
-    "df_proveedores  =pd.read_csv('./Datasets/Proveedores.csv', encoding='latin-1', sep=',', index_col='IDProveedor')\n",
-    "df_sucursales   =pd.read_csv('./Datasets/Sucursales.csv' , encoding='latin-1', sep=';', index_col='ID')\n",
-    "df_ventas       =pd.read_csv('./Datasets/Venta.csv'      , encoding='latin-1', sep=',', index_col='IdVenta')"
+    "#Levantamos los datasets en crudo (archivos .csv)\n",
+    "df_clientes     =pd.read_csv('./Datasets/Clientes.csv'   , encoding='latin-1', sep=';')\n",
+    "df_compras      =pd.read_csv('./Datasets/Compra.csv'     , encoding='latin-1', sep=',')\n",
+    "df_gastos       =pd.read_csv('./Datasets/Gasto.csv'      , encoding='latin-1', sep=',')\n",
+    "df_localidades  =pd.read_csv('./Datasets/Localidades.csv', encoding='latin-1', sep=',')\n",
+    "df_proveedores  =pd.read_csv('./Datasets/Proveedores.csv', encoding='latin-1', sep=',')\n",
+    "df_sucursales   =pd.read_csv('./Datasets/Sucursales.csv' , encoding='latin-1', sep=';')\n",
+    "df_ventas       =pd.read_csv('./Datasets/Venta.csv'      , encoding='latin-1', sep=',')"
    ]
   },
   {
@@ -100,16 +101,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit (windows store)",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -123,12 +122,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1ef47f4165116b14d53321dc99b29d4e9c72347c275033ccf951af3c7befa3a1"
+    "hash": "510428449cbd3844e45262579cff7aa82d8d47f02b4035bfe069ac1b7e46235d"
    }
   }
  },
