Detalles de redacción

--- a/evaluacion-preliminar-datasets.ipynb
+++ b/evaluacion-preliminar-datasets.ipynb
@@ -41,8 +41,18 @@
    "metadata": {},
    "source": [
     "Las columnas están nombradas sin seguir ninguna regla. Algunas en mayúsculas, otras en minúsculas, con `camelcase` u otro tipo de separación entre palabras, cómo la separación mediante `underscore`.\n",
-    "Además,ciertos nombres no son lo suficientemente descriptivos para brindarnos la información necesaria sobre lo que contiene la columna. <br>\n",
+    "Además,ciertos nombres no son lo suficientemente descriptivos para brindarnos la información necesaria sobre lo que contiene la columna.<br>\n",
     "Este mismo invonveniente tenemos en el contenido de ciertas columnas. Los datos no siguen un estándar de escritura."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mencionamos algunas incongruencias en el dataset **Clientes.csv**\n",
+    "- Que es X o Y? No sabemos a que hace referencia.\n",
+    "- ID en mayúsculas y el resto de columnas capitalizadas.\n",
+    "- El domicilio se carga en mayúsculas?."
    ]
   },
   {
@@ -118,11 +128,7 @@
     }
    ],
    "source": [
-    "\"\"\"Mencionamos algunas incongruencias...\n",
-    "- Que es X o Y? \n",
-    "- ID en mayúsculas y el resto de columnas capitalizadas? \n",
-    "- El domicilio se carga en mayúsculas?\n",
-    "\"\"\"\n",
+    "#Vemos las incongruencias en un solo registro...\n",
     "df_clientes.head(1)"
    ]
   },
