Exportamos el análisis preliminar a un archivo CSV

--- a/evaluacion-preliminar-datasets.ipynb
+++ b/evaluacion-preliminar-datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,13 +16,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Análisis Preliminar de Datos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Antes de levantar los archivos, cambiamos su atributo `encoding` a `utf-8`. <br>\n",
     "Luego elegimos el encoding (puede ser ANSI o Latin-1, por el momento, debido a las tildes)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +129,7 @@
        "0  LOMA VERDE  -58,81850307  -34,30997088    NaN  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +257,7 @@
        "4                 Bs.As.   -34,6173080  -58,4161790  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,6 +265,237 @@
    "source": [
     "#Observemos que en solo 5 registros observamos que no existe normalización en Localidad y Provincia.\n",
     "df_sucursales.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluación de Calidad de Datos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El dataset **Clientes.csv** posee una columna completa con valores nulos.Procedemos a eliminarla debido a que no aporta ningún tipo de valor y entorpece el análisis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clientes.drop(columns='col10', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obtenemos un análisis de los registros y datos de todos los datasets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataFrames = [df_clientes, df_compras, df_gastos, df_localidades, df_proveedores, df_sucursales, df_ventas]\n",
+    "names = ['df_clientes', 'df_compras', 'df_gastos', 'df_localidades', 'df_proveedores', 'df_sucursales', 'df_ventas']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_datos = []\n",
+    "sin_null = []\n",
+    "con_null = []\n",
+    "total_registros = []\n",
+    "total_registros_null = []\n",
+    "\n",
+    "for i, df in enumerate(dataFrames):\n",
+    "    #Datos null inclusive\n",
+    "    total_datos.append( df.shape[0] * df.shape[1] )\n",
+    "    #Datos sin null\n",
+    "    sin_null.append(df.count().sum())\n",
+    "    #Cantidad de Registros\n",
+    "    total_registros.append( len(df) )\n",
+    "    #Datos null\n",
+    "    null_columnas = df.isna().sum()\n",
+    "    con_null.append( null_columnas.sum() )\n",
+    "    #Obtenemos la cantidad de registros que poseen al menos un dato nulo\n",
+    "    is_null = df.isnull()\n",
+    "    row_has_null = is_null.any(axis=1)\n",
+    "    total_registros_null.append( len(df[row_has_null]) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.DataFrame({\n",
+    "'Dataset': names,\n",
+    "'Datos Total': total_datos, \n",
+    "'Datos sin null': sin_null, \n",
+    "'Datos Nulos': con_null, \n",
+    "'Cantidad Registros': total_registros, \n",
+    "'Cant de Registros con Null': total_registros_null\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Dataset</th>\n",
+       "      <th>Datos Total</th>\n",
+       "      <th>Datos sin null</th>\n",
+       "      <th>Datos Nulos</th>\n",
+       "      <th>Cantidad Registros</th>\n",
+       "      <th>Cant de Registros con Null</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>df_clientes</td>\n",
+       "      <td>24048</td>\n",
+       "      <td>23787</td>\n",
+       "      <td>261</td>\n",
+       "      <td>2672</td>\n",
+       "      <td>145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>df_compras</td>\n",
+       "      <td>103851</td>\n",
+       "      <td>103484</td>\n",
+       "      <td>367</td>\n",
+       "      <td>11539</td>\n",
+       "      <td>367</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>df_gastos</td>\n",
+       "      <td>43200</td>\n",
+       "      <td>43200</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8640</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>df_localidades</td>\n",
+       "      <td>57988</td>\n",
+       "      <td>56949</td>\n",
+       "      <td>1039</td>\n",
+       "      <td>4142</td>\n",
+       "      <td>543</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>df_proveedores</td>\n",
+       "      <td>98</td>\n",
+       "      <td>96</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>df_sucursales</td>\n",
+       "      <td>217</td>\n",
+       "      <td>217</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>df_ventas</td>\n",
+       "      <td>466450</td>\n",
+       "      <td>464634</td>\n",
+       "      <td>1816</td>\n",
+       "      <td>46645</td>\n",
+       "      <td>1800</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Dataset  Datos Total  Datos sin null  Datos Nulos  \\\n",
+       "0     df_clientes        24048           23787          261   \n",
+       "1      df_compras       103851          103484          367   \n",
+       "2       df_gastos        43200           43200            0   \n",
+       "3  df_localidades        57988           56949         1039   \n",
+       "4  df_proveedores           98              96            2   \n",
+       "5   df_sucursales          217             217            0   \n",
+       "6       df_ventas       466450          464634         1816   \n",
+       "\n",
+       "   Cantidad Registros  Cant de Registros con Null  \n",
+       "0                2672                         145  \n",
+       "1               11539                         367  \n",
+       "2                8640                           0  \n",
+       "3                4142                         543  \n",
+       "4                  14                           2  \n",
+       "5                  31                           0  \n",
+       "6               46645                        1800  "
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Guardamos el resultado en un archivo para su futura consulta."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('analisis.csv', index=False)"
    ]
   }
  ],
