--- a/Modules/ETL/pasos.ipynb
+++ b/Modules/ETL/pasos.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -64,59 +64,86 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Provincia</th>\n",
-       "      <th>Nombre_y_Apellido</th>\n",
-       "      <th>Domicilio</th>\n",
-       "      <th>Telefono</th>\n",
-       "      <th>Edad</th>\n",
-       "      <th>Localidad</th>\n",
-       "      <th>X</th>\n",
-       "      <th>Y</th>\n",
-       "      <th>col10</th>\n",
+       "      <th>IdVenta</th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>Fecha_Entrega</th>\n",
+       "      <th>IdCanal</th>\n",
+       "      <th>IdCliente</th>\n",
+       "      <th>IdSucursal</th>\n",
+       "      <th>IdEmpleado</th>\n",
+       "      <th>IdProducto</th>\n",
+       "      <th>Precio</th>\n",
+       "      <th>Cantidad</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>Buenos Aires</td>\n",
-       "      <td>HEBER JONI SANTANA</td>\n",
-       "      <td>LAS HERAS Y BAT. 24 DE FEBRERO 4150  RINCON DE...</td>\n",
-       "      <td>42-5161</td>\n",
-       "      <td>58</td>\n",
-       "      <td>LOMA VERDE</td>\n",
-       "      <td>-58,81850307</td>\n",
-       "      <td>-34,30997088</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2018-03-09</td>\n",
+       "      <td>2018-03-17</td>\n",
+       "      <td>3</td>\n",
+       "      <td>969</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1674</td>\n",
+       "      <td>42817</td>\n",
+       "      <td>813.12</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2018-12-28</td>\n",
+       "      <td>2018-12-29</td>\n",
+       "      <td>2</td>\n",
+       "      <td>884</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1674</td>\n",
+       "      <td>42795</td>\n",
+       "      <td>543.18</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2016-03-28</td>\n",
+       "      <td>2016-03-31</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1722</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1674</td>\n",
+       "      <td>42837</td>\n",
+       "      <td>430.32</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   ID     Provincia   Nombre_y_Apellido  \\\n",
-       "0   1  Buenos Aires  HEBER JONI SANTANA   \n",
+       "   IdVenta       Fecha Fecha_Entrega  IdCanal  IdCliente  IdSucursal  \\\n",
+       "0        1  2018-03-09    2018-03-17        3        969          13   \n",
+       "1        2  2018-12-28    2018-12-29        2        884          13   \n",
+       "2        3  2016-03-28    2016-03-31        2       1722          13   \n",
        "\n",
-       "                                           Domicilio Telefono  Edad  \\\n",
-       "0  LAS HERAS Y BAT. 24 DE FEBRERO 4150  RINCON DE...  42-5161    58   \n",
-       "\n",
-       "    Localidad             X             Y  col10  \n",
-       "0  LOMA VERDE  -58,81850307  -34,30997088    NaN  "
+       "   IdEmpleado  IdProducto  Precio  Cantidad  \n",
+       "0        1674       42817  813.12       2.0  \n",
+       "1        1674       42795  543.18       3.0  \n",
+       "2        1674       42837  430.32       1.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_clientes.head(1)"
+    "df_ventas.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -124,28 +151,28 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2672 entries, 0 to 2671\n",
+      "RangeIndex: 46645 entries, 0 to 46644\n",
       "Data columns (total 10 columns):\n",
-      " #   Column             Non-Null Count  Dtype  \n",
-      "---  ------             --------------  -----  \n",
-      " 0   ID                 2672 non-null   int64  \n",
-      " 1   Provincia          2647 non-null   object \n",
-      " 2   Nombre_y_Apellido  2648 non-null   object \n",
-      " 3   Domicilio          2630 non-null   object \n",
-      " 4   Telefono           2637 non-null   object \n",
-      " 5   Edad               2672 non-null   int64  \n",
-      " 6   Localidad          2647 non-null   object \n",
-      " 7   X                  2616 non-null   object \n",
-      " 8   Y                  2618 non-null   object \n",
-      " 9   col10              0 non-null      float64\n",
-      "dtypes: float64(1), int64(2), object(7)\n",
-      "memory usage: 208.9+ KB\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   IdVenta        46645 non-null  int64  \n",
+      " 1   Fecha          46645 non-null  object \n",
+      " 2   Fecha_Entrega  46645 non-null  object \n",
+      " 3   IdCanal        46645 non-null  int64  \n",
+      " 4   IdCliente      46645 non-null  int64  \n",
+      " 5   IdSucursal     46645 non-null  int64  \n",
+      " 6   IdEmpleado     46645 non-null  int64  \n",
+      " 7   IdProducto     46645 non-null  int64  \n",
+      " 8   Precio         45721 non-null  float64\n",
+      " 9   Cantidad       45753 non-null  float64\n",
+      "dtypes: float64(2), int64(6), object(2)\n",
+      "memory usage: 3.6+ MB\n",
       "None\n"
      ]
     }
    ],
    "source": [
-    "print(df_clientes.info())"
+    "print(df_ventas.info())"
    ]
   },
   {
