Diccionario de datos terminado

--- a/Modules/dicc.ipynb
+++ b/Modules/dicc.ipynb
@@ -90,19 +90,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "     ID        int64 \n",
-    " 1   Sucursal  object\n",
-    " 2   Direccion object\n",
-    " 3   Localidad object\n",
-    " 4   Provincia object\n",
-    " 5   Latitud   object\n",
-    " 6   Longitud  object"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Sucursales\n",
     "`idSucursal` (entero): Número unívoco que identifica cada sucursal.<br>\n",
     "`sucursal` (string): Nombre de la sucursal.<br>\n",
@@ -128,6 +115,25 @@
     "`idProducto`(entero): Número unívoco que identifica cada producto.<br>\n",
     "`precio`(decimal): Precio de la venta.<br>\n",
     "`cantidad`(entero): Cantidad de productos de la venta."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Canal de Venta\n",
+    "`idCanal` (entero): Número unívoco que identifica cada canal de venta.<br>\n",
+    "`descripcion` (string): Descripción del canal de venta."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tipo de Gasto\n",
+    "`idTipoGasto` (entero): Número unívoco que identifica cada tipo de gasto.<br>\n",
+    "`descripcion` (string): Descripción deltipo de gasto.<br>\n",
+    "`montoAprox` (decimal): Monto aproximado."
    ]
   }
  ],
