--- a/Modules/ETL/pasos.ipynb
+++ b/Modules/ETL/pasos.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,12 +35,14 @@
     "df_localidades  =pd.read_csv('../Datasets/Localidades.csv', encoding='latin-1', sep=',')\n",
     "df_proveedores  =pd.read_csv('../Datasets/Proveedores.csv', encoding='latin-1', sep=',')\n",
     "df_sucursales   =pd.read_csv('../Datasets/Sucursales.csv' , encoding='latin-1', sep=';')\n",
-    "df_ventas       =pd.read_csv('../Datasets/Venta.csv'      , encoding='latin-1', sep=',')"
+    "df_ventas       =pd.read_csv('../Datasets/Venta.csv'      , encoding='latin-1', sep=',')\n",
+    "df_canalventa   =pd.read_excel('../Datasets/CanalDeVenta.xlsx')\n",
+    "df_tipogasto    =pd.read_csv('../Datasets/TiposDeGasto.csv', encoding='latin-1', sep=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -64,86 +66,49 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>IdVenta</th>\n",
-       "      <th>Fecha</th>\n",
-       "      <th>Fecha_Entrega</th>\n",
-       "      <th>IdCanal</th>\n",
-       "      <th>IdCliente</th>\n",
-       "      <th>IdSucursal</th>\n",
-       "      <th>IdEmpleado</th>\n",
-       "      <th>IdProducto</th>\n",
-       "      <th>Precio</th>\n",
-       "      <th>Cantidad</th>\n",
+       "      <th>CODIGO</th>\n",
+       "      <th>DESCRIPCION</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>2018-03-09</td>\n",
-       "      <td>2018-03-17</td>\n",
-       "      <td>3</td>\n",
-       "      <td>969</td>\n",
-       "      <td>13</td>\n",
-       "      <td>1674</td>\n",
-       "      <td>42817</td>\n",
-       "      <td>813.12</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>Telefónica</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>2018-12-28</td>\n",
-       "      <td>2018-12-29</td>\n",
-       "      <td>2</td>\n",
-       "      <td>884</td>\n",
-       "      <td>13</td>\n",
-       "      <td>1674</td>\n",
-       "      <td>42795</td>\n",
-       "      <td>543.18</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>OnLine</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>2016-03-28</td>\n",
-       "      <td>2016-03-31</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1722</td>\n",
-       "      <td>13</td>\n",
-       "      <td>1674</td>\n",
-       "      <td>42837</td>\n",
-       "      <td>430.32</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>Presencial</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   IdVenta       Fecha Fecha_Entrega  IdCanal  IdCliente  IdSucursal  \\\n",
-       "0        1  2018-03-09    2018-03-17        3        969          13   \n",
-       "1        2  2018-12-28    2018-12-29        2        884          13   \n",
-       "2        3  2016-03-28    2016-03-31        2       1722          13   \n",
-       "\n",
-       "   IdEmpleado  IdProducto  Precio  Cantidad  \n",
-       "0        1674       42817  813.12       2.0  \n",
-       "1        1674       42795  543.18       3.0  \n",
-       "2        1674       42837  430.32       1.0  "
+       "   CODIGO DESCRIPCION\n",
+       "0       1  Telefónica\n",
+       "1       2      OnLine\n",
+       "2       3  Presencial"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_ventas.head(3)"
+    "df_canalventa.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -151,28 +116,20 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 46645 entries, 0 to 46644\n",
-      "Data columns (total 10 columns):\n",
-      " #   Column         Non-Null Count  Dtype  \n",
-      "---  ------         --------------  -----  \n",
-      " 0   IdVenta        46645 non-null  int64  \n",
-      " 1   Fecha          46645 non-null  object \n",
-      " 2   Fecha_Entrega  46645 non-null  object \n",
-      " 3   IdCanal        46645 non-null  int64  \n",
-      " 4   IdCliente      46645 non-null  int64  \n",
-      " 5   IdSucursal     46645 non-null  int64  \n",
-      " 6   IdEmpleado     46645 non-null  int64  \n",
-      " 7   IdProducto     46645 non-null  int64  \n",
-      " 8   Precio         45721 non-null  float64\n",
-      " 9   Cantidad       45753 non-null  float64\n",
-      "dtypes: float64(2), int64(6), object(2)\n",
-      "memory usage: 3.6+ MB\n",
+      "RangeIndex: 3 entries, 0 to 2\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   CODIGO       3 non-null      int64 \n",
+      " 1   DESCRIPCION  3 non-null      object\n",
+      "dtypes: int64(1), object(1)\n",
+      "memory usage: 176.0+ bytes\n",
       "None\n"
      ]
     }
    ],
    "source": [
-    "print(df_ventas.info())"
+    "print(df_canalventa.info())"
    ]
   },
   {
@@ -272,7 +229,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3.10.5 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -286,12 +243,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "510428449cbd3844e45262579cff7aa82d8d47f02b4035bfe069ac1b7e46235d"
+    "hash": "1ef47f4165116b14d53321dc99b29d4e9c72347c275033ccf951af3c7befa3a1"
    }
   }
  },
