--- a/Modules/evaluacion-preliminar-datasets.ipynb
+++ b/Modules/evaluacion-preliminar-datasets.ipynb
@@ -34,13 +34,15 @@
    "outputs": [],
    "source": [
     "#Levantamos los datasets en crudo (archivos .csv)\n",
-    "df_clientes     =pd.read_csv('../Datasets/Clientes.csv'   , encoding='latin-1', sep=';')\n",
-    "df_compras      =pd.read_csv('../Datasets/Compra.csv'     , encoding='latin-1', sep=',')\n",
-    "df_gastos       =pd.read_csv('../Datasets/Gasto.csv'      , encoding='latin-1', sep=',')\n",
-    "df_localidades  =pd.read_csv('../Datasets/Localidades.csv', encoding='latin-1', sep=',')\n",
-    "df_proveedores  =pd.read_csv('../Datasets/Proveedores.csv', encoding='latin-1', sep=',')\n",
-    "df_sucursales   =pd.read_csv('../Datasets/Sucursales.csv' , encoding='latin-1', sep=';')\n",
-    "df_ventas       =pd.read_csv('../Datasets/Venta.csv'      , encoding='latin-1', sep=',')"
+    "df_clientes     =pd.read_csv('Datasets/Clientes.csv'    , encoding='latin-1', sep=';')\n",
+    "df_compras      =pd.read_csv('Datasets/Compra.csv'      , encoding='latin-1', sep=',')\n",
+    "df_gastos       =pd.read_csv('Datasets/Gasto.csv'       , encoding='latin-1', sep=',')\n",
+    "df_localidades  =pd.read_csv('Datasets/Localidades.csv' , encoding='latin-1', sep=',')\n",
+    "df_proveedores  =pd.read_csv('Datasets/Proveedores.csv' , encoding='latin-1', sep=',')\n",
+    "df_sucursales   =pd.read_csv('Datasets/Sucursales.csv'  , encoding='latin-1', sep=';')\n",
+    "df_ventas       =pd.read_csv('Datasets/Venta.csv'       , encoding='latin-1', sep=',')\n",
+    "df_canalventa   =pd.read_excel('Datasets/CanalDeVenta.xlsx')\n",
+    "df_tipogasto    =pd.read_csv('Datasets/TiposDeGasto.csv', encoding='latin-1', sep=',')"
    ]
   },
   {
@@ -501,7 +503,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3.10.5 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -515,12 +517,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "510428449cbd3844e45262579cff7aa82d8d47f02b4035bfe069ac1b7e46235d"
+    "hash": "1ef47f4165116b14d53321dc99b29d4e9c72347c275033ccf951af3c7befa3a1"
    }
   }
  },
